@@ -1,5 +1,6 @@
 Version 5.5.0 (TBD)
     Fixed the `media` plugin not saving the alternative source url in some situations #TINY-4113
+    Fixed the `unlink` toolbar button not working when multiple links were selected #TINY-4867
 Version 5.4.1 (TBD)
     Fixed zero-width caret characters included in the Search and Replace plugin results #TINY-4599
     Fixed content in an iframe element parsing as dom elements instead of text content #TINY-5943
